<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:baselineAligned="false"
    android:divider="?android:attr/dividerHorizontal"
    android:orientation="vertical"
    android:showDividers="middle"
    android:focusableInTouchMode="true"
    >

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:resize_mode="fixed_height"
        android:visibility="gone"
        android:layout_margin="8dp"
       />

    <ImageView
            android:id="@+id/imageView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="8dp"
            android:textAppearance="?attr/textAppearanceListItem" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recipe_detail"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textIsSelectable="true"
        tools:context="com.udacity.bakingapp.StepDetailFragment" />

    <Button
        android:id="@+id/previous_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Previous" />

    <Button
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next" />


</LinearLayout>